# Pizzence

./: README.md  main.py  pyproject.toml  vector.py
chrome_langchain_db/: chroma.sqlite3
