[project]
name = "ollama-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
]
